# MarkOS_cycle

./: CMakeLists.txt  README.md
src/: Cycle.cpp  Cycle.h  CycleListener.h
test/: CMakeLists.txt  CycleTest.cpp  CycleTest.h  MockCycleListener.h  main.cpp
